header visibility fixed

--- a/src/sass/header-upper.scss
+++ b/src/sass/header-upper.scss
@@ -4,6 +4,7 @@
   position: sticky;
   background: white;
   z-index: 10;
+  box-shadow: 0 0 15px -8px $text-grey;
   .header-upper {
     padding: 1.5em 0;
     display: flex;
@@ -44,9 +45,9 @@
     }
   }
   .header-upper__alt-nav {
+    z-index: 10;
     display: none;
     width: 100%;
-    height: 300px;
     background: white;
     transition: height 0.5s ease-in; 
     .header__header-upper__nav {
@@ -197,6 +198,7 @@
       &.visible {
         display: block;
         position: absolute;
+        height: 250px;
       }
     }
   }
